# Web_Homework_2

./: README.md
bot_docker/: display.py  dockerfile  normalize.py  notebook_core.py  pyproject.toml
bot_poetry/: pyproject.toml
bot_poetry/bot/: Bot.py  Notebook.json  adress_book.py  book.csv  file_parser.py  main.py
